--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+<h2 id="start">ВВЕДЕНИЕ</h2>
+    <h3 id="first">1. Предмет стереометрии</h3>
+    <p>Школьный курс геометрии состоит из
+	двух частей: планиметрии и стереометрии. В планиметрии изучаются свойства геометрических фигур на плоскости.
+	<b>Стереометрия — это раздел геометрии, в котором изучаются свойства фигур в
+	    пространстве.</b>Слово «стереометрия» происходит от
+	греческих слов «стереос» — объёмный, пространственный и «метрео» — измерять.
+    </p>
   <canvas id="canvas"></canvas>
   <script>
 		// Variables for referencing the canvas and 2dcanvas context
